--- a/XmlFormatter/Views/Home/Index.cshtml
+++ b/XmlFormatter/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     </p>
     
     <h3>3 - Here your formatted XML</h3>
-    <textarea>@Html.Encode(Model.Formatted)</textarea>
+    <textarea>@Model.Formatted</textarea>
 
     if (Model.Message != null)
     {
